Metadata changes due to execution

--- a/TEST_ONE.ipynb
+++ b/TEST_ONE.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "3c48d84c",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "7998ff47",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "da08ba38",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "580fd7ce",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "77cc3507",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "6013550f",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "cfd0fa8c",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "311931f1",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "c1fe9afb",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "2254083e",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "id": "89e1621e",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "dfe71ea5",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "ba667c85",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "a0ebd077",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
       "   macro avg       0.74      0.61      0.64      1103\n",
       "weighted avg       0.83      0.85      0.83      1103\n",
       "\n",
-      "Application de SMOTE...\n",
+      "Applying SMOTE...\n",
       "\n",
       "--- 2. Logistic Regression (After SMOTE) ---\n",
       "              precision    recall  f1-score   support\n",
@@ -1328,8 +1328,8 @@
        },
        "data": [
         {
-         "hovertemplate": "Statut=Reste (Fidèle)<br>Heures Travaillées / Jour=%{x}<br>Âge=%{y}<br>Salaire Mensuel=%{z}<extra></extra>",
-         "legendgroup": "Reste (Fidèle)",
+         "hovertemplate": "Status=Stayed (Loyal)<br>Heures Travaillées / Jour=%{x}<br>Âge=%{y}<br>Salaire Mensuel=%{z}<extra></extra>",
+         "legendgroup": "Stayed (Loyal)",
          "marker": {
           "color": "blue",
           "opacity": 0.6,
@@ -1337,7 +1337,7 @@
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "Reste (Fidèle)",
+         "name": "Stayed (Loyal)",
          "scene": "scene",
          "showlegend": true,
          "type": "scatter3d",
@@ -12446,8 +12446,8 @@
          ]
         },
         {
-         "hovertemplate": "Statut=Part (Démission)<br>Heures Travaillées / Jour=%{x}<br>Âge=%{y}<br>Salaire Mensuel=%{z}<extra></extra>",
-         "legendgroup": "Part (Démission)",
+         "hovertemplate": "Status=Left (Attrition)<br>Heures Travaillées / Jour=%{x}<br>Âge=%{y}<br>Salaire Mensuel=%{z}<extra></extra>",
+         "legendgroup": "Left (Attrition)",
          "marker": {
           "color": "red",
           "opacity": 0.6,
@@ -12455,7 +12455,7 @@
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "Part (Démission)",
+         "name": "Left (Attrition)",
          "scene": "scene",
          "showlegend": true,
          "type": "scatter3d",
@@ -14603,7 +14603,7 @@
        "layout": {
         "legend": {
          "title": {
-          "text": "Statut"
+          "text": "Status"
          },
          "tracegroupgap": 0
         },
