--- a/PredictiveModel.ipynb
+++ b/PredictiveModel.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "3c48d84c",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "7998ff47",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "da08ba38",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "580fd7ce",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "77cc3507",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "6013550f",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "cfd0fa8c",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "311931f1",
    "metadata": {},
    "outputs": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "c1fe9afb",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "2254083e",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
          "type": "float"
         }
        ],
-       "ref": "a7c6d413-7574-4776-bce6-339a1b244a73",
+       "ref": "9289d938-bf91-43fb-890b-3c69efc4ed47",
        "rows": [
         [
          "1",
@@ -970,9 +970,9 @@
          "0.9325842696629213",
          "0.9651162790697675",
          "0.9948982690555724",
-         "0.4366915225982666",
-         "0.02501058578491211",
-         "0.4617021083831787"
+         "0.4422638416290283",
+         "0.024000883102416992",
+         "0.4662647247314453"
         ],
         [
          "4",
@@ -982,9 +982,9 @@
          "0.6348314606741573",
          "0.743421052631579",
          "0.8891648952323109",
-         "0.044245243072509766",
-         "0.0060214996337890625",
-         "0.05026674270629883"
+         "0.043992042541503906",
+         "0.006098747253417969",
+         "0.050090789794921875"
         ],
         [
          "2",
@@ -994,9 +994,9 @@
          "0.47191011235955055",
          "0.6292134831460674",
          "0.9390525356817493",
-         "0.9261853694915771",
-         "0.09762024879455566",
-         "1.0238056182861328"
+         "0.9225399494171143",
+         "0.10251092910766602",
+         "1.0250508785247803"
         ],
         [
          "3",
@@ -1006,9 +1006,9 @@
          "0.3258426966292135",
          "0.38283828382838286",
          "0.8854509565745521",
-         "0.021104812622070312",
-         "0.06498503684997559",
-         "0.0860898494720459"
+         "0.019539356231689453",
+         "0.06581687927246094",
+         "0.08535623550415039"
         ],
         [
          "0",
@@ -1018,9 +1018,9 @@
          "0.24719101123595505",
          "0.3534136546184739",
          "0.8162222897054358",
-         "0.05881190299987793",
-         "0.0070035457611083984",
-         "0.06581544876098633"
+         "0.060532569885253906",
+         "0.006000995635986328",
+         "0.06653356552124023"
         ]
        ],
        "shape": {
@@ -1067,9 +1067,9 @@
        "      <td>0.932584</td>\n",
        "      <td>0.965116</td>\n",
        "      <td>0.994898</td>\n",
-       "      <td>0.436692</td>\n",
-       "      <td>0.025011</td>\n",
-       "      <td>0.461702</td>\n",
+       "      <td>0.442264</td>\n",
+       "      <td>0.024001</td>\n",
+       "      <td>0.466265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1079,9 +1079,9 @@
        "      <td>0.634831</td>\n",
        "      <td>0.743421</td>\n",
        "      <td>0.889165</td>\n",
-       "      <td>0.044245</td>\n",
-       "      <td>0.006021</td>\n",
-       "      <td>0.050267</td>\n",
+       "      <td>0.043992</td>\n",
+       "      <td>0.006099</td>\n",
+       "      <td>0.050091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1091,9 +1091,9 @@
        "      <td>0.471910</td>\n",
        "      <td>0.629213</td>\n",
        "      <td>0.939053</td>\n",
-       "      <td>0.926185</td>\n",
-       "      <td>0.097620</td>\n",
-       "      <td>1.023806</td>\n",
+       "      <td>0.922540</td>\n",
+       "      <td>0.102511</td>\n",
+       "      <td>1.025051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1103,9 +1103,9 @@
        "      <td>0.325843</td>\n",
        "      <td>0.382838</td>\n",
        "      <td>0.885451</td>\n",
-       "      <td>0.021105</td>\n",
-       "      <td>0.064985</td>\n",
-       "      <td>0.086090</td>\n",
+       "      <td>0.019539</td>\n",
+       "      <td>0.065817</td>\n",
+       "      <td>0.085356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1115,9 +1115,9 @@
        "      <td>0.247191</td>\n",
        "      <td>0.353414</td>\n",
        "      <td>0.816222</td>\n",
-       "      <td>0.058812</td>\n",
-       "      <td>0.007004</td>\n",
-       "      <td>0.065815</td>\n",
+       "      <td>0.060533</td>\n",
+       "      <td>0.006001</td>\n",
+       "      <td>0.066534</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1132,11 +1132,11 @@
        "0  Logistic Regression  0.854034   0.619718  0.247191  0.353414  0.816222   \n",
        "\n",
        "   Training Time (s)  Testing Time (s)  Total Time (s)  \n",
-       "1           0.436692          0.025011        0.461702  \n",
-       "4           0.044245          0.006021        0.050267  \n",
-       "2           0.926185          0.097620        1.023806  \n",
-       "3           0.021105          0.064985        0.086090  \n",
-       "0           0.058812          0.007004        0.065815  "
+       "1           0.442264          0.024001        0.466265  \n",
+       "4           0.043992          0.006099        0.050091  \n",
+       "2           0.922540          0.102511        1.025051  \n",
+       "3           0.019539          0.065817        0.085356  \n",
+       "0           0.060533          0.006001        0.066534  "
       ]
      },
      "metadata": {},
@@ -1317,19 +1317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "89e1621e",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'model_result' is not defined",
+     "evalue": "name 'model_results' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 3.3 INTERPRETABILITY (FEATURE IMPORTANCE)\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m rf_pipeline \u001b[38;5;241m=\u001b[39m model_result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom Forest\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpipeline\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m rf_model_step \u001b[38;5;241m=\u001b[39m rf_pipeline\u001b[38;5;241m.\u001b[39mnamed_steps[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassifier\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      7\u001b[0m ohe \u001b[38;5;241m=\u001b[39m rf_pipeline\u001b[38;5;241m.\u001b[39mnamed_steps[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpreprocessor\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mnamed_transformers_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mencoder\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'model_result' is not defined"
+      "Cell \u001b[1;32mIn[26], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 3.3 INTERPRETABILITY (FEATURE IMPORTANCE)\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m rf_pipeline \u001b[38;5;241m=\u001b[39m model_results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom Forest\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpipeline\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m rf_model_step \u001b[38;5;241m=\u001b[39m rf_pipeline\u001b[38;5;241m.\u001b[39mnamed_steps[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassifier\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      7\u001b[0m ohe \u001b[38;5;241m=\u001b[39m rf_pipeline\u001b[38;5;241m.\u001b[39mnamed_steps[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpreprocessor\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mnamed_transformers_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mencoder\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model_results' is not defined"
      ]
     }
    ],
