Code cleaning + text coherence

--- a/PredictiveModel.ipynb
+++ b/PredictiveModel.ipynb
@@ -48,7 +48,7 @@
     "* [2. Exploratory Data Analysis (EDA)](#2-exploratory-data-analysis-eda)\n",
     "* [3. Modeling & Improvement Strategy](#3-modeling--improvement-strategy)\n",
     "    * [3.1 Encoding and Train/Test Split](#31-encoding-and-traintest-split)\n",
-    "    * [3.2 Baseline Model: Logistic Regression](#32-baseline-model-logistic-regression)\n",
+    "    * [3.2 Comparative Modeling: Benchmarking 5 Algorithms](#32-comparative-modeling-benchmarking-5-algorithms)\n",
     "    * [3.3 Interpretability: What drives attrition ?](#33-interpretability-what-drives-attrition)\n",
     "* [4. Model Evaluation & Interpretation](#4-model-evaluation--interpretation)\n",
     "    * [4.1 Improvement Strategy: Adressing Class Imbalance](#41-improvement-strategy-addressing-class-imbalance)\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "da08ba38",
    "metadata": {},
    "outputs": [
@@ -331,6 +331,7 @@
    ],
    "source": [
     "# 3. Processing Time Data\n",
+    "\n",
     "# Rename ID column\n",
     "in_time.rename(columns={'Unnamed: 0': 'EmployeeID'}, inplace=True)\n",
     "out_time.rename(columns={'Unnamed: 0': 'EmployeeID'}, inplace=True)\n",
@@ -339,31 +340,28 @@
     "in_time_indexed = in_time.set_index('EmployeeID')\n",
     "out_time_indexed = out_time.set_index('EmployeeID')\n",
     "\n",
-    "# Convert to datetime (apply to all columns)\n",
-    "# Since reading csv might have parsed as object, ensure they are datetime\n",
-    "# This can be slow, so applying pd.to_datetime on the whole dataframe\n",
+    "# Convert to datetime\n",
     "in_time_indexed = in_time_indexed.apply(pd.to_datetime)\n",
     "out_time_indexed = out_time_indexed.apply(pd.to_datetime)\n",
     "\n",
     "# Calculate duration for each day\n",
     "working_duration = out_time_indexed - in_time_indexed\n",
     "\n",
-    "# Calculate mean working duration per employee (row-wise mean)\n",
+    "# Calculate mean working duration per employee\n",
     "# result is a Timedelta, we convert to hours (float)\n",
     "main_df['AverageWorkingHours'] = working_duration.mean(axis=1).dt.total_seconds() / 3600\n",
     "\n",
-    "# Reset index for working_duration to merge if needed, but we assigned directly using the aligned index (assuming main_df is sorted by EmployeeID, which it is 1 to 4410)\n",
-    "# To be safe, let's do a merge\n",
+    "# Reset index for working_duration to merge if needed\n",
     "avg_hours = pd.DataFrame(working_duration.mean(axis=1).dt.total_seconds() / 3600, columns=['AverageWorkingHours'])\n",
     "main_df = main_df.merge(avg_hours, on='EmployeeID', how='left')\n",
     "\n",
-    "# Drop the duplicate column if my previous direct assignment worked (it didn't because indices might not match perfectly without set_index)\n",
-    "# Actually, the merge is safer. Let's check columns.\n",
+    "# Drop the duplicate column if previous direct assignment worked\n",
     "if 'AverageWorkingHours_x' in main_df.columns:\n",
     "    main_df.rename(columns={'AverageWorkingHours_x': 'AverageWorkingHours'}, inplace=True)\n",
     "    main_df.drop(columns=['AverageWorkingHours_y'], inplace=True)\n",
     "\n",
     "# 4. Final Clean Check\n",
+    "\n",
     "print(\"Final Data Shape:\", main_df.shape)\n",
     "print(\"Missing Values:\", main_df.isnull().sum().sum())\n",
     "print(main_df.head())"
@@ -381,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "580fd7ce",
    "metadata": {},
    "outputs": [
@@ -415,12 +413,8 @@
     "    diff_out = out_cols.difference(in_cols)\n",
     "    print(\"In only:\", diff_in[:5])\n",
     "    print(\"Out only:\", diff_out[:5])\n",
-    "    \n",
-    "# Calculate working duration again explicitly ensuring alignment if needed\n",
-    "# If they are just same dates but diff order, direct subtraction implies alignment by label.\n",
-    "# If names are different, we have a problem.\n",
     "\n",
-    "# Let's try to calculate for Employee 1 explicitly to see why it was NaN\n",
+    "# Spot check for an employee\n",
     "emp1_in = in_time_indexed.loc[1]\n",
     "emp1_out = out_time_indexed.loc[1]\n",
     "print(\"Emp 1 Mean Diff:\", (emp1_out - emp1_in).mean())"
@@ -442,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "77cc3507",
    "metadata": {},
    "outputs": [
@@ -499,7 +493,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "# Create img directory if it doesn't exist\n",
+    "# Create img directory\n",
     "if not os.path.exists('img'):\n",
     "    os.makedirs('img')\n",
     "\n",
@@ -593,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "311931f1",
    "metadata": {},
    "outputs": [
@@ -610,12 +604,12 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Create output directory if it doesn't exist\n",
+    "# Create output directory\n",
     "if not os.path.exists('csv_out'):\n",
     "    os.makedirs('csv_out')\n",
     "\n",
     "# 1. Loading data\n",
-    "# (Ensure the 'csv_in/' folder exists and contains the files)\n",
+    "\n",
     "general_data = pd.read_csv('csv_in/general_data.csv')\n",
     "employee_survey = pd.read_csv('csv_in/employee_survey_data.csv')\n",
     "manager_survey = pd.read_csv('csv_in/manager_survey_data.csv')\n",
@@ -623,6 +617,7 @@
     "out_time = pd.read_csv('csv_in/out_time.csv')\n",
     "\n",
     "# 2. Handling Missing Values (Imputation)\n",
+    "\n",
     "# Numerical -> Median\n",
     "for col in ['NumCompaniesWorked', 'TotalWorkingYears']:\n",
     "    general_data[col] = general_data[col].fillna(general_data[col].median())\n",
@@ -632,7 +627,7 @@
     "    employee_survey[col] = employee_survey[col].fillna(employee_survey[col].mode()[0])\n",
     "\n",
     "# 3. Temporal Feature Engineering (Calculating working hours)\n",
-    "# Renaming for merging\n",
+    "\n",
     "in_time.rename(columns={'Unnamed: 0': 'EmployeeID'}, inplace=True)\n",
     "out_time.rename(columns={'Unnamed: 0': 'EmployeeID'}, inplace=True)\n",
     "\n",
@@ -640,7 +635,7 @@
     "in_time_idx = in_time.set_index('EmployeeID').apply(pd.to_datetime)\n",
     "out_time_idx = out_time.set_index('EmployeeID').apply(pd.to_datetime)\n",
     "\n",
-    "# Calculating duration (Out - In)\n",
+    "# Calculating duration\n",
     "working_duration = out_time_idx - in_time_idx\n",
     "\n",
     "# Average per employee (in hours)\n",
@@ -648,6 +643,7 @@
     "avg_hours_df = pd.DataFrame(avg_hours, columns=['AverageWorkingHours']).reset_index()\n",
     "\n",
     "# 4. Final Merge\n",
+    "\n",
     "main_df = general_data.merge(manager_survey, on='EmployeeID', how='inner')\n",
     "main_df = main_df.merge(employee_survey, on='EmployeeID', how='inner')\n",
     "main_df = main_df.merge(avg_hours_df, on='EmployeeID', how='inner')\n",
@@ -708,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c1fe9afb",
    "metadata": {},
    "outputs": [
@@ -741,6 +737,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# --- 1. Loading and Cleaning ---\n",
+    "\n",
     "df = main_df.copy()\n",
     "\n",
     "# Deleted columns\n",
@@ -749,6 +746,7 @@
     "y = df['Attrition_Numeric']\n",
     "\n",
     "# --- 2. Preprocessing Pipeline ---\n",
+    "\n",
     "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
     "categorical_features = X.select_dtypes(include=['object']).columns\n",
     "\n",
@@ -771,6 +769,7 @@
     "    ])\n",
     "\n",
     "# --- 3. Stratified Train/Test Split ---\n",
+    "\n",
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.25, random_state=42)\n",
     "for train_index, test_index in sss.split(X, y):\n",
     "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
@@ -784,18 +783,26 @@
    "id": "fccb69ed",
    "metadata": {},
    "source": [
-    "### 3.2 Baseline Model: Logistic Regression\n",
+    "### 3.2 Comparative Modeling: Benchmarking 5 Algorithms\n",
     "\n",
-    "**Objective:** Establish a performance benchmark with a simple, interpretable model.\n",
+    "**Objective:** Evaluate multiple classification algorithms to find the best candidate for our specific problem.\n",
     "\n",
-    "**Methodology & Justification:**\n",
-    "* **Scaling:** This is **mandatory** for Logistic Regression to ensure that variables with large ranges (like Salary) do not dominate the coefficients.\n",
-    "* **Evaluation Focus:** We look beyond Accuracy. We pay close attention to the **Recall** of class '1' (Attrition), which measures how many actual leavers the model detected."
+    "**Selected Algorithms:**\n",
+    "To cover different mathematical approaches, we selected 5 distinct models:\n",
+    "1.  **Logistic Regression:** A linear baseline, simple and interpretable.\n",
+    "2.  **Random Forest:** An ensemble method (Bagging) robust to overfitting.\n",
+    "3.  **Support Vector Machine (SVM):** Effective in high-dimensional spaces.\n",
+    "4.  **K-Nearest Neighbors (KNN):** A distance-based classifier.\n",
+    "5.  **Decision Tree:** A rule-based model (useful for comparison with Random Forest).\n",
+    "\n",
+    "**Methodology:**\n",
+    "* **Pipeline:** Each model is wrapped in a pipeline that automatically handles scaling (essential for SVM/KNN/LogReg) and encoding.\n",
+    "* **Evaluation Focus:** While we monitor **Accuracy**, our primary focus is on **Recall** (Sensitivity) for the \"Attrition\" class. In an HR context, failing to detect a flight risk (False Negative) is the most critical error."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2254083e",
    "metadata": {},
    "outputs": [
@@ -887,7 +894,7 @@
          "type": "float"
         }
        ],
-       "ref": "9112234a-22db-4b8a-ad87-6c0d4f4fdaa7",
+       "ref": "7f031899-447a-4520-b881-a3ffe4e3f25b",
        "rows": [
         [
          "1",
@@ -897,9 +904,9 @@
          "0.9325842696629213",
          "0.9651162790697675",
          "0.9948982690555724",
-         "0.4383087158203125",
-         "0.026802539825439453",
-         "0.46511125564575195"
+         "0.4216945171356201",
+         "0.021091222763061523",
+         "0.44278573989868164"
         ],
         [
          "4",
@@ -909,9 +916,9 @@
          "0.6348314606741573",
          "0.743421052631579",
          "0.8891648952323109",
-         "0.040940046310424805",
-         "0.0051729679107666016",
-         "0.046113014221191406"
+         "0.041614532470703125",
+         "0.006014347076416016",
+         "0.04762887954711914"
         ],
         [
          "2",
@@ -921,9 +928,9 @@
          "0.47191011235955055",
          "0.6292134831460674",
          "0.9390525356817493",
-         "0.9336504936218262",
-         "0.10216355323791504",
-         "1.0358140468597412"
+         "0.9952523708343506",
+         "0.11184573173522949",
+         "1.10709810256958"
         ],
         [
          "3",
@@ -933,9 +940,9 @@
          "0.3258426966292135",
          "0.38283828382838286",
          "0.8854509565745521",
-         "0.020419597625732422",
-         "0.3576812744140625",
-         "0.3781008720397949"
+         "0.019833803176879883",
+         "0.0785675048828125",
+         "0.09840130805969238"
         ],
         [
          "0",
@@ -945,9 +952,9 @@
          "0.24719101123595505",
          "0.3534136546184739",
          "0.8162222897054358",
-         "0.06601905822753906",
-         "0.0067288875579833984",
-         "0.07274794578552246"
+         "0.06330466270446777",
+         "0.007779121398925781",
+         "0.07108378410339355"
         ]
        ],
        "shape": {
@@ -994,9 +1001,9 @@
        "      <td>0.932584</td>\n",
        "      <td>0.965116</td>\n",
        "      <td>0.994898</td>\n",
-       "      <td>0.438309</td>\n",
-       "      <td>0.026803</td>\n",
-       "      <td>0.465111</td>\n",
+       "      <td>0.421695</td>\n",
+       "      <td>0.021091</td>\n",
+       "      <td>0.442786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1006,9 +1013,9 @@
        "      <td>0.634831</td>\n",
        "      <td>0.743421</td>\n",
        "      <td>0.889165</td>\n",
-       "      <td>0.040940</td>\n",
-       "      <td>0.005173</td>\n",
-       "      <td>0.046113</td>\n",
+       "      <td>0.041615</td>\n",
+       "      <td>0.006014</td>\n",
+       "      <td>0.047629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1018,9 +1025,9 @@
        "      <td>0.471910</td>\n",
        "      <td>0.629213</td>\n",
        "      <td>0.939053</td>\n",
-       "      <td>0.933650</td>\n",
-       "      <td>0.102164</td>\n",
-       "      <td>1.035814</td>\n",
+       "      <td>0.995252</td>\n",
+       "      <td>0.111846</td>\n",
+       "      <td>1.107098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1030,9 +1037,9 @@
        "      <td>0.325843</td>\n",
        "      <td>0.382838</td>\n",
        "      <td>0.885451</td>\n",
-       "      <td>0.020420</td>\n",
-       "      <td>0.357681</td>\n",
-       "      <td>0.378101</td>\n",
+       "      <td>0.019834</td>\n",
+       "      <td>0.078568</td>\n",
+       "      <td>0.098401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1042,9 +1049,9 @@
        "      <td>0.247191</td>\n",
        "      <td>0.353414</td>\n",
        "      <td>0.816222</td>\n",
-       "      <td>0.066019</td>\n",
-       "      <td>0.006729</td>\n",
-       "      <td>0.072748</td>\n",
+       "      <td>0.063305</td>\n",
+       "      <td>0.007779</td>\n",
+       "      <td>0.071084</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1052,11 +1059,11 @@
       ],
       "text/plain": [
        "                 Model  Accuracy  ...  Testing Time (s)  Total Time (s)\n",
-       "1        Random Forest  0.989121  ...          0.026803        0.465111\n",
-       "4        Decision Tree  0.929284  ...          0.005173        0.046113\n",
-       "2                  SVM  0.910245  ...          0.102164        1.035814\n",
-       "3                  KNN  0.830462  ...          0.357681        0.378101\n",
-       "0  Logistic Regression  0.854034  ...          0.006729        0.072748\n",
+       "1        Random Forest  0.989121  ...          0.021091        0.442786\n",
+       "4        Decision Tree  0.929284  ...          0.006014        0.047629\n",
+       "2                  SVM  0.910245  ...          0.111846        1.107098\n",
+       "3                  KNN  0.830462  ...          0.078568        0.098401\n",
+       "0  Logistic Regression  0.854034  ...          0.007779        0.071084\n",
        "\n",
        "[5 rows x 9 columns]"
       ]
@@ -1110,6 +1117,7 @@
     "print(\"\\n--- Training & Evaluating 5 Models ---\")\n",
     "\n",
     "# --- FIGURES INITIALIZATION ---\n",
+    "\n",
     "fig_cm, axes_cm = plt.subplots(nrows=2, ncols=3, figsize=(18, 10))\n",
     "axes_cm = axes_cm.flatten()\n",
     "\n",
@@ -1117,6 +1125,7 @@
     "fig_pr, ax_pr = plt.subplots(figsize=(10, 6))\n",
     "\n",
     "# --- TRAINING LOOP ---\n",
+    "\n",
     "for i, (name, model) in enumerate(models.items()):\n",
     "    # Pipeline creation\n",
     "    clf = Pipeline(steps=[('preprocessor', preprocessor),\n",
@@ -1157,6 +1166,7 @@
     "    roc_auc = roc_auc_score(y_test, y_prob)\n",
     "\n",
     "    # --- STORAGE ---\n",
+    "\n",
     "    model_results[name] = {\n",
     "        'pipeline': clf,\n",
     "        'y_pred': y_pred,\n",
@@ -1199,6 +1209,7 @@
     "# ==============================================================================\n",
     "\n",
     "# --- Confusion Matrices ---\n",
+    "\n",
     "fig_cm.delaxes(axes_cm[5])\n",
     "fig_cm.tight_layout()\n",
     "# fig_cm.suptitle(\"Comparison of Confusion Matrices\", fontsize=16, y=1.02)\n",
@@ -1207,11 +1218,13 @@
     "display(fig_cm)\n",
     "\n",
     "# --- Stats Table ---\n",
+    "\n",
     "stats_df = pd.DataFrame(stats_table).sort_values(by=\"Recall\", ascending=False)\n",
     "print(\"\\n--- DETAILED PERFORMANCE STATISTICS ---\")\n",
     "display(stats_df)\n",
     "\n",
     "# --- ROC Curve ---\n",
+    "\n",
     "ax_roc.plot([0, 1], [0, 1], 'k--', label='Random Guess')\n",
     "ax_roc.set_xlabel('False Positive Rate')\n",
     "ax_roc.set_ylabel('True Positive Rate (Recall)')\n",
@@ -1222,6 +1235,7 @@
     "display(fig_roc)\n",
     "\n",
     "# --- Precision-Recall Curve ---\n",
+    "\n",
     "ax_pr.set_xlabel('Recall')\n",
     "ax_pr.set_ylabel('Precision')\n",
     "ax_pr.set_title('Precision-Recall Curve Comparison', fontsize=14)\n",
@@ -1662,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ba667c85",
    "metadata": {},
    "outputs": [
@@ -1706,27 +1720,26 @@
     "# --- FINAL MODEL: Optimization + SMOTE ---\n",
     "\n",
     "# 1. Base Pipeline (Preparation -> SMOTE -> empty Random Forest)\n",
+    "\n",
     "pipeline_to_optimize = ImbPipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('smote', SMOTE(random_state=42)),\n",
     "    ('classifier', RandomForestClassifier(random_state=42))\n",
     "])\n",
     "\n",
-    "# We define the \"Grid\" of parameters to test\n",
-    "# Note : The syntax is 'step_name__parameter_name'\n",
+    "# Define the \"Grid\" of parameters to test\n",
     "param_grid = {\n",
-    "    'classifier__n_estimators': [50, 100],      # Test 50 or 100 trees\n",
-    "    'classifier__max_depth': [10, 20, None],    # Test different depths\n",
-    "    'classifier__min_samples_leaf': [1, 2]      # Test leaf size\n",
+    "    'classifier__n_estimators': [50, 100],      \n",
+    "    'classifier__max_depth': [10, 20, None],    \n",
+    "    'classifier__min_samples_leaf': [1, 2]     \n",
     "}\n",
     "\n",
     "# Research Start (GridSearch)\n",
-    "# scoring='recall' means we ask the computer to prefer the model that best finds departures (class 1)\n",
     "print(\"Recherche des meilleurs hyperparamètres en cours (GridSearch)...\")\n",
     "grid_search = GridSearchCV(estimator=pipeline_to_optimize,\n",
     "                           param_grid=param_grid,\n",
     "                           cv=3,                # Cross-Validation\n",
-    "                           scoring='recall',    # Optimize for Recall!\n",
+    "                           scoring='recall',    # Optimize for Recall\n",
     "                           n_jobs=-1,           # Use all CPU cores\n",
     "                           verbose=1)\n",
     "\n",
