--- a/PredictiveModel.ipynb
+++ b/PredictiveModel.ipynb
@@ -427,11 +427,7 @@
    "source": [
     "## 2. Exploratory Data Analysis (EDA)\n",
     "\n",
-    "Before modeling, we visually investigated the relationships between key features and the target variable (`Attrition`).\n",
-    "\n",
-    "**Visual Insights:**\n",
-    "* **Attrition vs. Workload:** The boxplots reveal a clear trend: employees who leave tend to have significantly higher **Average Working Hours** than those who stay. This suggests **overwork** is a primary driver of turnover.\n",
-    "* **Correlation Matrix:** We observed a negative correlation between *Age*/*TotalWorkingYears* and Attrition, indicating that younger, less experienced employees are more volatile."
+    "Before modeling, we visually investigated the relationships between key features and the target variable (`Attrition`)."
    ]
   },
   {
@@ -531,6 +527,16 @@
     "plt.savefig('img/attrition_vs_age.png')\n",
     "\n",
     "print(\"Plots saved in 'img' folder.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9514f54",
+   "metadata": {},
+   "source": [
+    "**Visual Insights:**\n",
+    "* **Correlation Matrix:** We observed a negative correlation between *Age*/*TotalWorkingYears* and Attrition, indicating that younger, less experienced employees are more volatile.\n",
+    "* **Attrition vs. Workload:** The boxplots reveal a clear trend: employees who leave tend to have significantly higher **Average Working Hours** than those who stay. This suggests **overwork** is a primary driver of turnover."
    ]
   },
   {
@@ -1671,6 +1677,7 @@
     "* **Optimization (GridSearch):** We do not trust default parameters blindly. We use `GridSearchCV` to test combinations of:\n",
     "    * `n_estimators`: Number of trees (stability).\n",
     "    * `max_depth`: To control complexity and prevent the model from learning \"noise\".\n",
+    "    * `min_samples_leaf`: To force the model to generalize by requiring a minimum number of samples per leaf (prevents creating rules for single individuals).\n",
     "* **Why?** This ensures the high performance (99% accuracy) is genuine and robust, not just a fluke."
    ]
   },
