Added Role for Maisam

--- a/PredictiveModel.ipynb
+++ b/PredictiveModel.ipynb
@@ -16,7 +16,7 @@
     "| Project Group Members | Role |\n",
     "| :--- | :--- |\n",
     "| **El Meskine Anas** | ** |\n",
-    "| **Haider Maisam** | ** |\n",
+    "| **Haider Maisam** | *Project Manager* |\n",
     "| **Ferchichi Haifa** | ** |\n",
     "| **Gautier Quentin** | ** |"
    ]
