Roles for everyone

--- a/PredictiveModel.ipynb
+++ b/PredictiveModel.ipynb
@@ -15,10 +15,10 @@
    "source": [
     "| Project Group Members | Role |\n",
     "| :--- | :--- |\n",
-    "| **El Meskine Anas** | ** |\n",
+    "| **El Meskine Anas** | *Data Analyst* |\n",
     "| **Haider Maisam** | *Project Manager* |\n",
-    "| **Ferchichi Haifa** | ** |\n",
-    "| **Gautier Quentin** | ** |"
+    "| **Ferchichi Haifa** | *Data Engineer* |\n",
+    "| **Gautier Quentin** | *Machine Learning Engineer* |"
    ]
   },
   {
